test: ThemeService 테스트 추가